@@ -168,7 +168,12 @@ class WidthSelVisitor final : public VNVisitor {
         }
     }
     AstNodeExpr* newMulConst(FileLine* fl, uint32_t elwidth, AstNodeExpr* indexp) {
-        AstNodeExpr* const extendp = new AstExtend{fl, indexp};
+        AstNodeExpr* extendp;
+        if (indexp->width() > 32) {
+            extendp = new AstSel{fl, indexp, 0, 32};
+        } else {
+            extendp = new AstExtend{fl, indexp};
+        }
         extendp->dtypeSetLogicUnsized(
             32, std::max(V3Number::log2b(elwidth) + 1, indexp->widthMin()), VSigning::UNSIGNED);
         AstNodeExpr* const mulp
