@@ -83,6 +83,7 @@ Verilator 5.035 devel
 * Fix port default values with `--coverage-line` creating `0=0` (#5920). [Drew Ranck]
 * Fix missing C++ regeneration when Verilog files are updated (#5934). [Zhouyi Shen]
 * Fix stream expressions (#5938). [Ryszard Rozak, Antmicro Ltd.]
+* Fix packed selection using over 32-bit index (#5957).
 
 
 Verilator 5.034 2025-02-24
